# SpaceNotes

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  build-client.sh  deploy-dev-client.sh  deploy-to-nas.sh  docker-compose.example.yml  docker-compose.yml  entrypoint.sh  nginx-client.conf  nginx.conf  opencode.json
.claude/: settings.local.json
.github/workflows/: docker-publish.yml
client-web/: flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  version.json
client-web/assets/: NOTICES
spacenotes-mcp/: Cargo.toml
spacenotes-mcp/src/: http.rs  main.rs  mcp.rs  spacetime_client.rs  tools.rs
spacenotes-mcp/src/bindings/: append_to_note_reducer.rs  delete_folder_reducer.rs  find_replace_in_note_reducer.rs  get_recent_notes_reducer.rs  mod.rs  prepend_to_note_reducer.rs  upsert_folder_reducer.rs
spacetime-module/: Cargo.toml
spacetime-module/src/: folder_reducers.rs  lib.rs  note_reducers.rs
src/: client.rs  folder.rs  frontmatter.rs  main.rs  note.rs  reconcile.rs  sanitize.rs  scanner.rs  tracker.rs  watcher.rs  writer.rs
src/spacetime_bindings/: clear_all_reducer.rs  create_folder_reducer.rs  delete_note_reducer.rs  folder_table.rs  folder_type.rs  mod.rs  note_table.rs  note_type.rs  update_note_content_reducer.rs  update_note_reducer.rs  upsert_note_reducer.rs
